--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -84,7 +84,7 @@ body{
     opacity: 0;
 }
 .card-img-overlay:hover{
-    opacity: 0.4;
+    opacity: 0.3;
     background-color: white;
 }
 
@@ -92,4 +92,25 @@ body{
 .add-btn{
     background-color: #fe424d !important;
     border: none !important;
+}
+
+/* Edit Page */
+.edit-btn{
+    background-color: #fe424d !important;
+    border: none !important;
+}
+
+/* Show Page */
+.show-img{
+    height: 30vh;
+}
+
+.btns{
+    display: flex;
+    
+}
+
+.show-card{
+    padding-left: 0;
+    padding-right: 0;
 }
