--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,16 +1,32 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-    <h3>Listing Details: </h3>
-    <ul>
-        <li><%= listing.title %></li>
-        <li><%= listing.description %></li>
-        <li>&#8377;<%= listing.price.toLocaleString("en-IN") %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country %></li>
-    </ul>
-    <a href="/listings/<%= listing._id %>/edit">Edit this listing</a>
-    <br><br>
+
+<div class="row mt-3">
+  <div class="col-8 offset-3">
+    <h3>Listing Details</h3>
+   </div>
+    <div class="card show-card mt-3 col-6 offset-3">
+      <img
+        src="<%= listing.image %>"
+        class="card-img-top show-img"
+        alt="https://images.unsplash.com/photo-1718040506078-5a7b90746511?q=80&w=1177&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      />
+      <div class="card-body">
+        <p class="card-text mt-3">
+            <b><%= listing.title %></b><br>
+            <%= listing.description %><br>
+            &#8377;<%= listing.price.toLocaleString("en-IN") %></br>
+            <%= listing.location %><br>
+            <%= listing.country %></br>
+        </p>
+      </div>
+    </div>
+
+    <div class="btns mb-5">
+    <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-btn col-1 offset-3" >Edit</a>
+    
     <form method="POST" action="/listings/<%= listing.id %>?_method=DELETE">
-        <button>Delete this listing</button>
+      <button class="btn btn-dark offset-6">Delete</button>
     </form>
-</body>
+    </div>
+  
+</div>
